feat: add Swagger UI + comprehensive docs
- Add springdoc-openapi for live /swagger-ui.html
- Annotate controllers with @Tag/@Operation
- Rename GovernanaceController → GovernanceController (typo fix)
- Add docs/ folder:
  - API.md (REST API reference)
  - ARCHITECTURE.md (watsonx mapping)
  - DATA-MODEL.md (Avro + Parquet design)
  - GOVERNANCE.md (audit log design)
  - H2-CONSOLE.md (governance DB inspection)
- Update README with docs index